# cours_python_avance

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  consommation_brute_quaotidienne_gaz_elec.py  prix_instantane_carburant.py  pyproject.toml  pytest.ini  requirements.txt
src/: config.json  configuration.py  consommation_brute_quaotidienne_gaz_elec.py  main.py  prix_instantane_carburant.py
src/bdd/: db.py
src/sql/: consommation_brute_quotidienne_gaz_elec.sql  prix_instantane_carburant.sql
src/utils/: custom_logging.py  lecteur_configuration.py  stocker_fichier.py
tests/: conftest.py  test_configuration.py  test_db.py  test_lecteur_configuration.py  test_stocker_fichier.py
tests/fixtures/: data_gouv.json  data_type_inconnu.json  donnees_tests.json  economie_gouv.json
tests/fixtures/sql/: creation_table_test.sql
